adjust tab display height one more time, also fix issue with header overlap

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -15,7 +15,7 @@ html {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
+  align-items: flex-start;
   width: 100%;
   height: 100%;
   overflow: hidden;
