--- a/src/css/header.css
+++ b/src/css/header.css
@@ -15,6 +15,7 @@
   top: 0;
   left: 0;
   right: 0;
+  z-index: 100;
 
   display: flex;
   flex-direction: row;
